# cookiecutter-cpp

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: function.h
{{cookiecutter.project_slug}}/src/: main.cpp
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: function.cpp
{{cookiecutter.project_slug}}/test/: test.cpp
